@@ -2,6 +2,7 @@
 Version: 1.3.8
 Date: ????
   Changes:
+    - New API: get_child_technologies.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.7
 Date: 2025-05-04
